// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawMarkers candle with volume & regions draw 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 596,
            "width": 435,
            "x": -167,
            "y": 45,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 333,
            "width": 435,
            "x": 558,
            "y": 308,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 271,
            "width": 2,
            "x": 49,
            "y": 48,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 188,
            "width": 435,
            "x": -167,
            "y": 100,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 208,
            "width": 2,
            "x": 774,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 208,
            "width": 435,
            "x": 558,
            "y": 69,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
]
`;

exports[`drawMarkers candle with volume & regions events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "rgba(0, 255, 0, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 596,
            "width": 435,
            "x": -167,
            "y": 45,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(255, 0, 0, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 333,
            "width": 435,
            "x": 558,
            "y": 308,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(136, 136, 136, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#00ff00",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 271,
            "width": 2,
            "x": 49,
            "y": 48,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 188,
            "width": 435,
            "x": -167,
            "y": 100,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#ff0000",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 208,
            "width": 2,
            "x": 774,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 208,
            "width": 435,
            "x": 558,
            "y": 69,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers candle with volume & regions path 1`] = `
[
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
]
`;

exports[`drawMarkers candle with volume draw 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 298,
            "width": 435,
            "x": -167,
            "y": 52,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 166,
            "width": 435,
            "x": 558,
            "y": 184,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 49,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 435,
            "x": -167,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 774,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 435,
            "x": 558,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
]
`;

exports[`drawMarkers candle with volume events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "rgba(0, 255, 0, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 298,
            "width": 435,
            "x": -167,
            "y": 52,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(255, 0, 0, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 166,
            "width": 435,
            "x": 558,
            "y": 184,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(136, 136, 136, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#00ff00",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 49,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 435,
            "x": -167,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#ff0000",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 774,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 435,
            "x": 558,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers candle with volume path 1`] = `
[
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
]
`;

exports[`drawMarkers options Candle Style: CandleStyle.OHLCBars draw 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 271,
            "width": 2,
            "x": 49,
            "y": 48,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 217,
            "x": -167,
            "y": 288,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 217,
            "x": 50,
            "y": 100,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 208,
            "width": 2,
            "x": 774,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 217,
            "x": 558,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 217,
            "x": 775,
            "y": 277,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
]
`;

exports[`drawMarkers options Candle Style: CandleStyle.OHLCBars events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#00ff00",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 271,
            "width": 2,
            "x": 49,
            "y": 48,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 217,
            "x": -167,
            "y": 288,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 217,
            "x": 50,
            "y": 100,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#ff0000",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 208,
            "width": 2,
            "x": 774,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 217,
            "x": 558,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 217,
            "x": 775,
            "y": 277,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Candle Style: CandleStyle.OHLCBars path 1`] = `
[
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
]
`;

exports[`drawMarkers options Color strategy: CloseClose draw 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 208,
            "width": 2,
            "x": 774,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 208,
            "width": 435,
            "x": 558,
            "y": 69,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 271,
            "width": 2,
            "x": 49,
            "y": 48,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 188,
            "width": 435,
            "x": -167,
            "y": 100,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 184,
            "width": 431,
            "x": -165,
            "y": 102,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
]
`;

exports[`drawMarkers options Color strategy: CloseClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#00ff00",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#ff0000",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 208,
            "width": 2,
            "x": 774,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 208,
            "width": 435,
            "x": 558,
            "y": 69,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 271,
            "width": 2,
            "x": 49,
            "y": 48,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 188,
            "width": 435,
            "x": -167,
            "y": 100,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 184,
            "width": 431,
            "x": -165,
            "y": 102,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: CloseClose path 1`] = `
[
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
]
`;

exports[`drawMarkers options Color strategy: OpenClose draw 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 271,
            "width": 2,
            "x": 49,
            "y": 48,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 188,
            "width": 435,
            "x": -167,
            "y": 100,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 208,
            "width": 2,
            "x": 774,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 208,
            "width": 435,
            "x": 558,
            "y": 69,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
]
`;

exports[`drawMarkers options Color strategy: OpenClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#00ff00",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 271,
            "width": 2,
            "x": 49,
            "y": 48,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 188,
            "width": 435,
            "x": -167,
            "y": 100,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#ff0000",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 208,
            "width": 2,
            "x": 774,
            "y": 69,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 208,
            "width": 435,
            "x": 558,
            "y": 69,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: OpenClose path 1`] = `
[
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
]
`;
